--- a/app/assets/javascripts/templates/partials/_jumbotron.hbs.erb
+++ b/app/assets/javascripts/templates/partials/_jumbotron.hbs.erb
@@ -1,4 +1,4 @@
-{{!-- /shared/jumbotron --}}
+{{!-- /partials/jumbotron --}}
 
 <div class="jumbotron" style="background-image: url(<%= asset_path 'jumbotron.jpeg' %>); background-size: 100%;">
   <h1 class="text-center display-4">{{title}}</h1>
