--- a/app/assets/javascripts/templates/recipes/index.hbs
+++ b/app/assets/javascripts/templates/recipes/index.hbs
@@ -9,7 +9,7 @@
       <div class="card">
         <a href="/recipes/{{id}}"><img class="card-img-top show_recipe" src="{{image}}"></a>
         <div class="card-body">
-          <p class="card-text"><small class="text-muted">by <a href="/users/{{user.id}}">{{user.name}}</a></small></p>
+          <p class="card-text"><small class="text-muted">by <a href="/api/users/{{user_id}}/recipes", class="my_recipes">{{user.name}}</a></small></p>
           <h4 class="card-title"><a href="/recipes/{{id}}", class="show_recipe">{{name}}</a></h4>
           <p class="card-text">{{description}}</p>
         </div>
