Add has_many with order for instructions and recipe_ingredients

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -46,8 +46,7 @@
   Ingredients:
   <div class="form-group">
     <div class="recipe_ingredients">
-      <!-- sort_recipe_ingredients by id in ascending order for edit action -->
-      <%= f.fields_for :recipe_ingredients, sort_recipe_ingredients(recipe, f.object.id) do |ri_builder| %>
+      <%= f.fields_for :recipe_ingredients do |ri_builder| %>
         <%# raise ri_builder.inspect %>
         <%= render partial: 'recipe_ingredient_fields', locals: { f: ri_builder } %>
       <% end %>
@@ -61,9 +60,7 @@
   <div class="form-group">
     Instructions:
     <div class="instructions">
-      <!-- sort_instructions by id in ascending order for edit action -->
-      <%= f.fields_for :instructions, sort_instructions(recipe, f.object.id) do |instruction_builder| %>
-      <%#= f.fields_for :instructions, (recipe.ordered_instructions.order("id ASC") if f.object.id) do |instruction_builder| %>
+      <%= f.fields_for :instructions do |instruction_builder| %>
         <%# raise instruction_builder.inspect %>
         <%= render partial: 'instruction_fields', locals: { f: instruction_builder } %>
       <% end %>
