Add /current_user route for js processing

--- a/app/assets/javascripts/templates/recipes/show.hbs.erb
+++ b/app/assets/javascripts/templates/recipes/show.hbs.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="text-center">
     <h1>{{recipe.name}}</h1>
-
+<h2>{{current_user}}</h2>
     <img class="card-img-top" src="{{recipe.image}}">
 
     <p class="card-text"><small class="text-muted">by
