--- a/app/assets/javascripts/templates/recipes/show.hbs
+++ b/app/assets/javascripts/templates/recipes/show.hbs
@@ -36,7 +36,7 @@
   <hr>
 
   <div class="text-center">
-    {{#ifEquals current_user recipe.user.name}}
+    {{#ifEquals current_user.id recipe.user.id}}
       <a class="btn btn-primary" href="/users/{{recipe.user.id}}/recipes/{{recipe.id}}/edit">Edit Recipe</a> 
       <a data-confirm="Are you sure you want to delete this recipe?" class="btn btn-danger" rel="nofollow"data-method="delete" href="/users/{{recipe.user.id}}/recipes/{{recipe.id}}">Delete Recipe</a>
     {{else}}
