--- a/app/assets/javascripts/templates/recipes/show.hbs
+++ b/app/assets/javascripts/templates/recipes/show.hbs
@@ -35,14 +35,16 @@
 
   <hr>
 
-{{!-------------  Show Recipe Action Buttons -------------}}
+{{!-------------  Show Recipe Action Buttons (Edit, Delete, Clone-------------}}
   <div class="text-center">
     {{#ifEquals current_user.id recipe.user.id}}
       <a class="btn btn-primary" href="/users/{{recipe.user.id}}/recipes/{{recipe.id}}/edit">Edit Recipe</a> 
       <a data-confirm="Are you sure you want to delete this recipe?" class="btn btn-danger" rel="nofollow"data-method="delete" href="/users/{{recipe.user.id}}/recipes/{{recipe.id}}">Delete Recipe</a>
     {{else}}
-      {{#addReviewButton recipe current_user}} {{/addReviewButton}}
-      <a data-confirm="Are you sure you want to clone this recipe?" class="btn btn-primary" rel="nofollow" data-method="post" href="/recipes/{{recipe.id}}/copy">Clone Recipe</a>
+      {{#if current_user}}
+        {{#addReviewButton recipe current_user}} {{/addReviewButton}}
+        <a data-confirm="Are you sure you want to clone this recipe?" class="btn btn-primary" rel="nofollow" data-method="post" href="/recipes/{{recipe.id}}/copy">Clone Recipe</a>
+      {{/if}}
     {{/ifEquals}}
   </div>
 </div> {{!-- Container --}}
@@ -64,6 +66,9 @@
           <p class="card-text"><small class="text-muted">Feb 21, 2019</small></p>
           <p class="card-text">Rating: {{rating}} / 5</p>
           <p class="card-text">{{comment}}.</p>
+
+          <footer class="blockquote-footer"><a href="/recipes/{{../recipe.id}}/reviews/{{id}}/edit">Edit</a> |
+          <a rel="nofollow" data-method="delete" href="/recipes/{{../recipe.id}}/reviews/{{id}}">Remove</a></footer>
         </div> <!-- Card body -->
       </div> <!-- Card -->
     {{/each}}
