Add new review functions

--- a/app/assets/javascripts/templates/recipes/index.hbs
+++ b/app/assets/javascripts/templates/recipes/index.hbs
@@ -17,7 +17,7 @@
       <div class="card">
         <a href="/api/recipes/{{id}}"><img class="card-img-top show_recipe" src="{{image}}"></a>
         <div class="card-body">
-          <p class="card-text"><small class="text-muted">by <a class="my_recipes" href="/api/users/{{user_id}}/recipes" >{{user.name}}</a></small></p>
+          <p class="card-text"><small class="text-muted">by <a class="index_recipes" href="/api/users/{{user_id}}/recipes" >{{user.name}}</a></small></p>
           <h4 class="card-title"><a href="/api/recipes/{{id}}", class="show_recipe">{{name}}</a></h4>
           <p class="card-text">{{description}}</p>
         </div>
