--- a/app/assets/javascripts/templates/recipes/show.hbs
+++ b/app/assets/javascripts/templates/recipes/show.hbs
@@ -39,11 +39,11 @@
   <div class="text-center">
     {{#ifEquals current_user.id recipe.user.id}}
       <a class="btn btn-primary" href="/users/{{recipe.user.id}}/recipes/{{recipe.id}}/edit">Edit Recipe</a> 
-      <a data-confirm="Are you sure you want to delete this recipe?" class="btn btn-danger" rel="nofollow"data-method="delete" href="/users/{{recipe.user.id}}/recipes/{{recipe.id}}">Delete Recipe</a>
+      <a data-confirm="Are you sure you want to delete this recipe?" class="btn btn-danger" id="delete_recipe" rel="nofollow" data-method="delete" href="/users/{{recipe.user.id}}/recipes/{{recipe.id}}">Delete Recipe</a>
     {{else}}
       {{#if current_user}}
         {{#addReviewButton recipe current_user}} {{/addReviewButton}}
-        <a data-confirm="Are you sure you want to clone this recipe?" class="btn btn-primary" rel="nofollow" data-method="post" href="/recipes/{{recipe.id}}/copy">Clone Recipe</a>
+        <a data-confirm="Are you sure you want to clone this recipe?" class="btn btn-primary" id="delete_recipe" rel="nofollow" data-method="post" href="/recipes/{{recipe.id}}/copy">Clone Recipe</a>
       {{/if}}
     {{/ifEquals}}
   </div>
