--- a/app/assets/javascripts/templates/recipes/show.hbs
+++ b/app/assets/javascripts/templates/recipes/show.hbs
@@ -43,7 +43,7 @@
     {{else}}
       {{#if current_user}}
         {{#addReviewButton recipe current_user}} {{/addReviewButton}}
-        <a data-confirm="Are you sure you want to clone this recipe?" class="btn btn-primary" id="delete_recipe" rel="nofollow" data-method="post" href="/recipes/{{recipe.id}}/copy">Clone Recipe</a>
+        <a data-confirm="Are you sure you want to clone this recipe?" class="btn btn-primary"rel="nofollow" data-method="post" href="/recipes/{{recipe.id}}/copy">Clone Recipe</a>
       {{/if}}
     {{/ifEquals}}
   </div>
