--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -19,5 +19,5 @@
       </div> <!-- Card -->
     <% end %>
   </div> <!-- Card columns -->
-  <%= paginate recipes, window: 2 %>
+  <%= paginate recipes%>
 </div> <!-- Container -->
