--- a/app/views/shared/_messages.html.erb
+++ b/app/views/shared/_messages.html.erb
@@ -1,7 +1,9 @@
 <!-- messages -->
 
 <div class="container">
-  <% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
-  <% end %>
+  <div class="flash-message">
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>"><%= value %></div>
+    <% end %>
+  </div>
 </div>
