--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -3,15 +3,18 @@
 <div id="ajax-container">
   <%= render partial: 'shared/jumbotron', locals: { title: "Kitchen&Recipes" } %>
   
+  <!-- Single Page Application (listens for .index_recipes, .add_recipe) -->
+  <div class="text-center">
+    <%= link_to "All Recipes", api_recipes_path, class: "index_recipes" %>
+
+    <% if current_user %>
+      |
+      <%= link_to "My Recipes", api_user_recipes_path(current_user), class: "index_recipes" %> 
+      |
+      <%= link_to "Add Recipe", new_user_recipe_path(current_user), class: "add_recipe" %> 
+    <% end %>
+  </div>
+
   <!-- Render recipes  -->
-  <%#= render partial: 'recipes/recipe', locals: { recipes: @recipes } %>
-
-  <%= link_to "All Recipes", api_recipes_path, class: "index_recipes" %>
-
-  <% if current_user %>
-    |
-    <%= link_to "My Recipes", api_user_recipes_path(current_user), class: "index_recipes" %> 
-    |
-    <%= link_to "Add Recipe", new_user_recipe_path(current_user), class: "add_recipe" %> 
-  <% end %>
+  <%#= render partial: 'recipes/recipe_spa', locals: { recipes: @recipes } %>
 </div>
