Fix display of dates and avgrating NaN issues

--- a/app/assets/javascripts/templates/recipes/show.hbs
+++ b/app/assets/javascripts/templates/recipes/show.hbs
@@ -66,7 +66,7 @@
             <a href="/api/users/{{user_id}}/recipes", class="index_recipes">{{reviewer.name}}</a></strong>
         </div><!-- Card header -->
         <div class="card-body">
-          <p class="card-text"><small class="text-muted">Feb 21, 2019</small></p>
+          <p class="card-text"><small class="text-muted">{{created_date}}</small></p>
           <p class="card-text">Rating: {{rating}} / 5</p>
           <p class="card-text">{{comment}}.</p>
 
