--- a/app/views/shared/_jumbotron.html.erb
+++ b/app/views/shared/_jumbotron.html.erb
@@ -2,6 +2,6 @@
 
 <div class="jumbotron" style="background-image: url(<%= asset_path 'jumbotron.jpeg' %>); background-size: 100%;">
   <h1 class="text-center display-4"><%= title %></h1>
-  <!-- javascript Add/Edit Recipe: will add links to access recipes -->
+  <!-- javascript Add/Edit Recipes & Add/Edit Reviews: will add links to access recipes -->
   <div id="ajax-links"></div>
 </div>
