--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,5 @@
 <!-- /reviews/new -->
 
+<%= render partial: 'shared/jumbotron', locals: { title: "Review Recipe" } %>
+
 <%= render partial: 'form', locals: { recipe: @recipe, review: @review } %>
