--- a/app/assets/javascripts/templates/recipes/show.hbs
+++ b/app/assets/javascripts/templates/recipes/show.hbs
@@ -4,10 +4,11 @@
 
 <div class="container">
   <div class="text-center">
-    <h1>{{recipe.name}}</h1>
+    <h1>{{#titleCase recipe.name}} {{/titleCase}}</h1>
     <img height="156" width="182" src="{{recipe.image}}">
     <p class="card-text"><small class="text-muted">by
-    <a href="/api/users/{{recipe.user_id}}/recipes", class="index_recipes">{{recipe.user.name}}</a>
+    <a href="/api/users/{{recipe.user_id}}/recipes", class="index_recipes">{{#titleCase recipe.user.name}}
+    {{/titleCase}}</a>
     | {{recipe.created_at}}
     | {{recipe.reviews.length}} Reviews
     </br>
@@ -25,7 +26,7 @@
   <h5>Ingredients:</h5>
   {{#each recipe.recipe_ingredients}}
     <p><strong>{{quantity}}</strong> {{measurement.unit}}
-      {{ingredient.name}} {{description}}</p>
+      {{#titleCase ingredient.name}} {{/titleCase}} {{description}}</p>
   {{/each}}
   
   {{!-- Instructions --}}
