Project Review Live coding - Add a link for all recipes sorted by name

--- a/app/assets/javascripts/templates/recipes/links.hbs
+++ b/app/assets/javascripts/templates/recipes/links.hbs
@@ -1,6 +1,8 @@
 {{!-- /recipes/links (current_user) --}}
 
 <p class="text-center">
+  <a class="sort_recipes" href="/api/recipes">Sort Recipes by Name</a>
+  |
   <a class="index_recipes" href="/api/recipes" >All Recipes</a>
   {{#if current_user}}
     |
