--- a/app/assets/javascripts/templates/partials/_recipeLinks.hbs
+++ b/app/assets/javascripts/templates/partials/_recipeLinks.hbs
@@ -1,6 +1,9 @@
 {{!-- /partials/_recipeLinks (current_user) --}}
 
+<a class="sort_recipes" href="/api/recipes">Sort Recipes by Name</a>
+|
 <a class="index_recipes" href="/api/recipes" >All Recipes</a>
+
 {{#if current_user}}
   |
   <a class="index_recipes" href="/api/users/{{current_user.id}}/recipes" >My Recipes</a>
